--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 210px 160px 1fr;
+  grid-template-rows: 200px 160px 1fr;
   grid-gap: 10px;
   margin: 10px auto;
   grid-template-areas:
@@ -57,7 +57,7 @@ main {
 
 figure {
   grid-area: street;
-  margin: 5px auto;
+  margin: 0px 5px;
   box-sizing: content-box;
 }
 
