--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,16 +12,16 @@ main{
   max-width: 960px;
 }
 
-#home main{
-  display:grid;
-  grid-template-columns: 400px 560px;
-}
-
 header{
   padding: 10px;
   margin: 45px auto 0px auto;
   box-sizing: content-box;
   max-width: 960px;
+}
+
+#home main{
+  display:grid;
+  grid-template-columns: 400px 1fr;
 }
 
 nav {
@@ -33,9 +33,10 @@ nav {
   }
 
 nav ul {
-      margin: 0 0 0 8px;
+      margin: 0 auto;
       padding-left: 0;
       list-style: none;
+      max-width: 960px;
     }
 
 nav li {
