--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,31 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Lora&display=swap');
+
+
 body{
     background-color: rgba(178, 116, 123, .7);
 }
 
-main{
+main {
   display:grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
-  margin: 10px auto;
+  margin: 0px auto;
   padding: 0px 10px;
   box-sizing:content-box;
   max-width: 960px;
 }
 
+#home body {
+  display:grid;
+  grid-template-areas:
+    "headshot" "heading"
+    "headshot" "info";
+}
+
+#headshot {
+  grid-area: headshot;
+}
+
+#heading {
+  grid-area: heading;
+}
+
+#info {
+  grid-area: info;
+}
+
 header{
-  padding: 10px;
-  margin: 45px auto 0px auto;
-  box-sizing: content-box;
+  display:grid;
+  padding: 0 10px;
+  margin: 60px auto 0px auto;
   max-width: 960px;
 }
 
-#home main{
-  display:grid;
-  grid-template-columns: 400px 1fr;
+figure{
+  margin: 0px;
+  padding: 20px 0px;
+}
+
+h1{
+  font-family: "Bangers", "Courier", monospace;
+  font-size: 42px;
+  color: rgb(43, 76, 70);
+}
+
+h2 {
+  font-family: "Lora", "Times New Roman", serif;
+  font-size: 20px;
+  color: rgb(43, 76, 70);
+}
+
+p {
+  font-family: "Lora", "Times New Roman", serif;
+  font-size: 16px;
+}
+
+section{
+  padding: 0px 10px;
 }
 
 nav {
-    background-color: rgba(43, 76, 70, .8);
+    background-color: rgb(43, 76, 70);
     position: absolute;
     top: 0;
     left: 0;
@@ -60,3 +103,7 @@ nav a:hover {
 nav a:active {
       color: rgb(218, 165, 32);
     }
+
+figcaption {
+  font-style: italic;
+}
